# Kingdom

./: ARCHITECTURE.en.md  ARCHITECTURE.zh.md  BUILD_PLAN.en.md  BUILD_PLAN.zh.md  CONTEXT_MANAGEMENT.en.md  CONTEXT_MANAGEMENT.zh.md  CORE_MODEL.en.md  CORE_MODEL.zh.md  Cargo.toml  FAILOVER.en.md  FAILOVER.zh.md  INTERFACES.en.md  INTERFACES.md  M9a.md  M9b.md  MCP_CONTRACT.en.md  MCP_CONTRACT.md  OPEN_QUESTIONS.en.md  OPEN_QUESTIONS.md  README.en.md  README.md  README.zh.md  TODOS.en.md  TODOS.zh.md  UX.en.md  UX.md  VISION.en.md  VISION.zh.md
.github/workflows/: ci.yml  release.yml
crates/kingdom-bridge/: Cargo.toml
crates/kingdom-watchdog/: Cargo.toml
docs/: ARCHITECTURE.en.md  ARCHITECTURE.md  ARCHITECTURE.zh.md  BUILD_PLAN.en.md  BUILD_PLAN.md  BUILD_PLAN.zh.md  CONTEXT_MANAGEMENT.en.md  CONTEXT_MANAGEMENT.md  CONTEXT_MANAGEMENT.zh.md  CORE_MODEL.en.md  CORE_MODEL.md  CORE_MODEL.zh.md  FAILOVER.en.md  FAILOVER.md  FAILOVER.zh.md  INTERFACES.en.md  INTERFACES.md  INTERFACES.zh.md  MCP_CONTRACT.en.md  MCP_CONTRACT.md  MCP_CONTRACT.zh.md  OPEN_QUESTIONS.en.md  OPEN_QUESTIONS.md  OPEN_QUESTIONS.zh.md  TODOS.en.md  TODOS.md  TODOS.zh.md  UX.en.md  UX.md  UX.zh.md  VISION.en.md  VISION.md  VISION.zh.md
src/: lib.rs  storage.rs  test_support.rs  types.rs
src/cli/: attach.rs  clean.rs  cost.rs  daemon.rs  daemon_client.rs  doctor.rs  down.rs  job_diff.rs  log.rs  mod.rs  open.rs  replay.rs  restart.rs  swap.rs  up.rs
src/config/: mod.rs  watcher.rs
src/failover/: circuit_breaker.rs  handoff.rs  (+4 more)
tests/: m10_integration.rs  m5_process_manager.rs  m7_up_manager.rs
(+41 files in other folders)
